--- a/index.html
+++ b/index.html
@@ -12,40 +12,41 @@
 	<script src="assets/javascript/game.js"></script>
 	
 </head>
-<body onload="game();">
+<body onload="beginGame()">
 
-<div class="container center-block border" id="wrapper" style="margin-top: 100px;">
+<div class="container center-block" id="wrapper">
 	<div class= "row">
-		<div class="col-md-12" id="header" style="border-bottom: 1px solid #abbce9">
+		<div class="col-md-12" id="header">
 			<h1> COUNTRIES - HANGMAN GAME</h1>						
 		</div>	
 	<div>
 
 	<div class="row">	
-		<div class="col-md-4" style="padding-top: 25px;">
+		<div class="col-md-3" style="padding: 40px 0px 0px 20px; margin-bottom: 55px;">
 			<img src="assets/images/hangman6.png" id="hangman" class="img-style">
 		</div>
 		
-		<div class="col-md-8">
+		<div class="col-md-9">
 			<div class= "row">	
 				<div class="col-md-12">
-					<h2> Guess the Country <p id="word"></p> </h2>
+					<h2 id="status"> Press any Key to get Started! </h2>
+					<h2><p id="word"></p> </h2>
 				</div>
 			</div>
 			<div class="row">		
 				<div class="col-md-12">
-					<h2> No of Guesses Remaining <span id="chances"></span> </h2> 
+					<h2> No of Guesses Remaining <p id="chances"></p> </h2> 
 				</div>
 				<div class="col-md-12">	
-					<h2> Letters Already Guessed  <p id="misses"></p> </h2> 
+					<h2> Letters Already Guessed </h2>
+					<h2><p id="misses"></p> </h2> 
 				</div>
-			</div>			
-			
+			</div>						
 		</div>	
 
 	</div>
 	<div class = "row">
-		<div class = "col-md-6 ">
+		<div class = "col-md-6">
 			<h2 class="bg">Wins : <span id="wins">0</span> </h2> 
 		</div>
 		<div class = "col-md-6">	
