adding images, sounds and refactored JS file

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		</div>	
 	<div>
 
-	<div class="row">	
-		<div class="col-md-3" style="padding: 40px 0px 0px 20px; margin-bottom: 55px;">
-			<img src="assets/images/hangman6.png" id="hangman" class="img-style">
+	<div class="row" id="content">	
+		<div class="col-md-3" style="padding: 40px 0px 0px 20px;">
+			<img src="assets/images/Hangman0.gif" id="hangman" class="img-style">
 		</div>
 		
 		<div class="col-md-9">
@@ -33,7 +33,7 @@
 					<h2><p id="word"></p> </h2>
 				</div>
 			</div>
-			<div class="row">		
+			<div class="row"">		
 				<div class="col-md-12">
 					<h2> No of Guesses Remaining <p id="chances"></p> </h2> 
 				</div>
