--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="col-md-9">
 			<div class= "row">	
 				<div class="col-md-12">
-					<h2 id="status"> Press any Key to get Started! </h2>
+					<h2 id="status"> Loading game .....</h2>
 					<h2><p id="word"></p> </h2>
 				</div>
 			</div>
